HelloUltraviolet/Fixtures/RejectedSource/Expressions/EnumDuplicateVariant/Source/Main.uv
//! Rejected enum specimen for duplicate variant names.

public enum DuplicateVariantPayload {
    First
    First(i32)
}
